# HumanRustsources

./: .env-example  Cargo.toml  Dockerfile  docker-compose.yaml
src/: main.rs
src/domain/: mod.rs
src/domain/beneficios/: beneficios.rs  mod.rs  tipo_beneficio.rs
src/domain/cargo/: cargo.rs  mod.rs
src/domain/departamento/: departamento.rs  mod.rs
src/domain/pessoa/: escolaridade.rs  funcionario.rs  mod.rs
src/tests/domain/: mod.rs
src/tests/domain/funcionario/: funcionario_teste.rs  mod.rs
