[package]
name = "gerenciamento_rh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
serde = "1.0.198"
serde_json = "1.0.116"
sqlx = { version = "0.7.4", features = [
    "uuid",
    "chrono",
    "runtime-tokio",
    "postgres",
    "sqlx-postgres"
] }
tokio = { version = "1.37.0", features = ["full"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
